<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/stop_animation"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:text="停止动画" />

            <ToggleButton
                android:id="@+id/animate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textOff="关闭动画"
                android:textOn="开启动画" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/zhengzhou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="武汉" />

            <Button
                android:id="@+id/beijing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="北京" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/scroll_left"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/camera_left_arrow" />

            <Button
                android:id="@+id/scroll_up"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/scroll_left"
                android:text="@string/camera_up_arrow" />

            <Button
                android:id="@+id/scroll_down"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_below="@id/scroll_up"
                android:layout_toRightOf="@id/scroll_left"
                android:text="@string/camera_down_arrow" />

            <Button
                android:id="@+id/scroll_right"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/scroll_down"
                android:text="@string/camera_right_arrow" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/zoom_in"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:text="@string/camera_zoom_in" />

            <Button
                android:id="@+id/zoom_out"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:text="@string/camera_zoom_out" />
        </LinearLayout>
    </LinearLayout>

    <com.sfmap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>